[gd_scene load_steps=2 format=3 uid="uid://c5b6euyi44ilx"]

[ext_resource type="Script" uid="uid://bt5y4yavo5w40" path="res://Scripts/ui.gd" id="1_nt7q6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nt7q6")

[node name="MoneyAmount" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "hello
"
metadata/_edit_use_anchors_ = true

[node name="TimeCounter" type="Label" parent="."]
offset_left = 383.0
offset_top = 1.0
offset_right = 423.0
offset_bottom = 24.0
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true
ignore_time_scale = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
